# somatic

./: .gitignore  BENCHMARKS.md  LICENSE  README.md  pyproject.toml
benchmarks/: 2026-07-05-head-to-head.md  2026-07-07-spec-decode-3machine.md
docs/cluster/: CONNECT_A_UI.md  MLX_BACKEND.md  RUN.md
scripts/: live_split_worker.py  mlx_provision.py  mlx_run.py  mlx_split_worker.py
somatic/: __init__.py
somatic/cli/: cluster_cmds.py  main.py
somatic/cluster/: __init__.py  bench.py  capacity.py  doctor.py  hosts.py  launcher.py  provision.py  runstate.py  server.py  ssh.py  supervisor.py  verify.py
somatic/cluster/assets/: chat.html
somatic/runtime/: schemas.py
somatic/security/: __init__.py  public_worker.py
somatic/sequence_model/: __init__.py  boundary_adapters.py  boundary_codec_native.py  execution.py  interfaces.py  kv_cache.py  qwen.py  qwen_partition.py  qwen_real.py  remote.py  telemetry.py  tensor_execution.py  tensors.py  transformers_qwen.py
somatic/sequence_model/boundary_compression/: trainable_autoencoder_wire.py  wire_codec_runtime.py
somatic/servers/: provider_probe.py  sequence_worker.py
somatic/serving/: __init__.py  cluster_engine.py  mlx_engine.py  mlx_shard.py  openai_app.py
soup/: __init__.py
soup/cli/: cluster_cmds.py  main.py
soup/cluster/: __init__.py  bench.py  capacity.py  doctor.py  errors.py  footprint.py  hosts.py  launcher.py  provision.py  runstate.py  server.py  ssh.py  supervisor.py  verify.py
soup/cluster/assets/: chat.html
soup/runtime/: __init__.py
soup/security/: __init__.py  public_worker.py
soup/sequence_model/: boundary_adapters.py  boundary_codec_backend.py  boundary_codec_native.py  execution.py  interfaces.py  kv_cache.py  qwen.py  qwen_partition.py  qwen_real.py  remote.py  telemetry.py  tensor_execution.py  tensors.py  transformers_qwen.py
soup/sequence_model/boundary_compression/: __init__.py  boundary_wire_lossless.py  sparse_codebook_wire.py  trainable_autoencoder_wire.py  wire_codec_runtime.py
soup/servers/: __init__.py  provider_probe.py  sequence_worker.py
soup/serving/: __init__.py  cluster_engine.py  mlx_engine.py  mlx_shard.py  openai_app.py
tests/cluster/: test_capacity_fit.py  test_footprint.py  test_modes.py  test_naming.py  test_openai_app.py  test_provision_revision.py  test_runstate.py  test_shell_quote.py  test_spec_decode.py  test_tree_spec.py
